# loki

./: .gitignore  .pre-commit-config.yaml  README.md  compose.yaml  config.yaml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
data/kiwix/: .gitignore
loki/: __init__.py  cli.py  config.default.yaml  config.py  system.py
tests/: conftest.py  test_cleanup_cmd.py  test_config.py  test_setup_cmd.py  test_start_cmd.py  test_status_cmd.py  test_stop_cmd.py  test_system.py  test_update_cmd.py
tools/: kiwix_tool.py
